fix(aio): fix home learn more button alignment (#17154)

--- a/aio/src/styles/1-layouts/_marketing-layout.scss
+++ b/aio/src/styles/1-layouts/_marketing-layout.scss
@@ -144,6 +144,10 @@ section#intro {
     border-radius: 48px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 30px;
+    justify-content: center;
 
     &:hover {
       .material-icons {
